# air_collect

./: .gitignore  Dockerfile  README.md  README.rst  pyproject.toml
air_collect/: AirCollect.py  air_collect.py
air_collect/data/differentials/: liveDataDiff.csv
data/: liveData.csv  next48Data.csv  nextDaysData.csv  readMe.txt
tests/: test_air_collector.py
