[tool.poetry]
name = 'air_collect'
version = '1.0.1'
description = 'Local weather data collector using the Tomorrow.io Weather API'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']
license = 'GPL-3.0-or-later'

[tool.poetry.dependencies]
python = '^3.10'
requests = '^2.30.0'
python-dotenv = '^1.0.0'
APScheduler = '^3.10.1'
air-core = {git = 'https://github.com/roboto84/air_core.git', tag = 'v0.1.0'}
willow-core = {git = 'https://github.com/roboto84/willow_core.git', tag = 'v0.1.1'}

[tool.poetry.dev-dependencies]
pytest = '^7.2.0'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
